clean: DB周りのリファクタリング
ついでにメールをHTML化
